force-app/main/default/objects/Feasibility_Line_Item__c/Feasibility_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Feasibility Line Item</label>
    <nameField>
        <label>Feasibility Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feasibility Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>