force-app/main/default/objects/Feasibility_Line_Item__c/fields/Max_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Max_Bandwidth__c</fullName>
    <label>Max Bandwidth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>