force-app/main/default/objects/Feasibility_Line_Item__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <length>200</length>
    <type>Text</type>
</CustomField>