force-app/main/default/objects/Feasibility_Line_Item__c/fields/Quote_Member__c.field-meta.xml
<CustomField>
    <fullName>Quote_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Member</label>
    <referenceTo>vlocity_cmt__QuoteMember__c</referenceTo>
    <relationshipLabel>Feasibility Line Items</relationshipLabel>
    <relationshipName>Feasibility_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>